<resources>
    <string name="app_name">Mathematicians KG</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="contact">Связаться с нами</string>

    <string name="menu_home">Главная</string>
    <string name="menu_courses">Курсы</string>
    <string name="menu_about_us">О нас</string>
    <string name="our_mentors">Наши менторы</string>
    <string name="about_us">Основная цель наших математических курсов - развить навыки в математических направлениях у молодежи Кыргызстана. Наша школа склонна полагать, что большинство студентов поступят на факультет прикладной математики. Наши наставники создали индивидуальные курсы, такие как: Подготовка к SAT Math, Продвинутая математика и геометрия, Олимпиадная физика и т.д. Наша команда состоит из 6 наставников, которые являются профессионалами в своих направлениях и могут легко обучить студентов определенному направлению. Мы проводим занятия как онлайн, так и оффлайн, более того, уроки бесплатны, потому что наша цель - сделать математику простой для всех</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="technology">Technology</string>
    <string name="science">Science</string>
    <string name="medicine">Medicine</string>
    <string name="text_us">Напишите нам</string>
    <string name="mathematicians">MATHEMATICIANS</string>
    <string name="version_1_0">VERSION 1.0</string>
</resources>