<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="kg.geektech.mathematicianskg.presentation.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_courses"
        android:name="kg.geektech.mathematicianskg.presentation.courses.CoursesFragment"
        android:label="@string/menu_courses"
        tools:layout="@layout/fragment_courses" />

    <fragment
        android:id="@+id/nav_about_us"
        android:name="kg.geektech.mathematicianskg.presentation.about_us.AboutUsFragment"
        android:label="@string/menu_about_us"
        tools:layout="@layout/fragment_about_us" />

</navigation>